--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+# Created by https://www.toptal.com/developers/gitignore/api/codeblocks
+# Edit at https://www.toptal.com/developers/gitignore?templates=codeblocks
 
+### CodeBlocks ###
+# specific to CodeBlocks IDE
+*.layout
+*.depend
+# generated directories
+bin/
+obj/
+
+# End of https://www.toptal.com/developers/gitignore/api/codeblocks
 # Created by https://www.toptal.com/developers/gitignore/api/c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++
 
